RESOLVED FIXED264368
[JSC] Refine SyntaxError message for generator method parsing failure
https://bugs.webkit.org/show_bug.cgi?id=264368
Summary [JSC] Refine SyntaxError message for generator method parsing failure
Alexey Shvayka
Reported 2023-11-07 14:53:09 PST
It should say "method" rather than "function".
Attachments
Radar WebKit Bug Importer
Comment 1 2023-11-07 14:53:22 PST
Alexey Shvayka
Comment 2 2023-11-07 15:07:37 PST
EWS
Comment 3 2023-11-08 01:00:11 PST
Committed 270379@main (17d1d747ad3b): <https://commits.webkit.org/270379@main> Reviewed commits have been landed. Closing PR #20131 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.